[package]
name = "passage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebkey = {version = "0.3.5", features = ["jwt-convert"]}
jsonwebtoken = {version = "8.2.0", default-features = false }
serde = {version = "1.0", features = ["derive"] }
