[package]
name = "passage-id"
description = "Server SDK for passage.id authentication"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/robyoder/passage-rust/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebkey = {version = "0.3.5", features = ["jwt-convert"]}
jsonwebtoken = {version = "8.2.0", default-features = false }
serde = {version = "1.0", features = ["derive"] }
